--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello Test.
+---
+layout: words
+title: tschannes words
+description: This is my first amazing page.
+---
+
+<div id="home">
+  <h1>Blog Posts</h1>
+  <ul class="posts">
+    {% for post in site.posts %}
+      <li><span>{{ post.date | date_to_string }}</span> &raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
+    {% endfor %}
+  </ul>
+</div>
