just another change

--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 ---
 layout: words
-title: tschannes on words
+title: new title
 description: tschannes is a reader. He is also a writer, an avid surfer on the waves of the interwebs, a content and clarity enthusiast, an information strategist. All things considered, he is a man of words.
 ---
 
 <div id="home">
   <ul class="posts">
     {% for post in site.posts %}
-      <li> 
-		
+      <li>
+
 		<div class="row">
 			<div class="small-12 medium-3 columns">
 				<div class="frame.front">
@@ -20,7 +20,7 @@ description: tschannes is a reader. He is also a writer, an avid surfer on the w
 				<p>{{post.lead}}</p>
 			</div>
 		</div>
-		
+
       </li>
     {% endfor %}
   </ul>
