--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: words
-title: new title
+title: Toni
 description: tschannes is a reader. He is also a writer, an avid surfer on the waves of the interwebs, a content and clarity enthusiast, an information strategist. All things considered, he is a man of words.
 ---
 
